# heart_disease_classifier

./: Dockerfile  README.md  pyproject.toml
app/: main.py  test.py
exploratory_data_analysis/: 01_data_understanding.ipynb  02_data_quality_and_cleaning.ipynb  02_target_variable_and_feature_importance.ipynb
models/: log_regression.joblib  random_forest.joblib  xgbooost.joblib
training/: hyperparameter_tuning.ipynb  train.py
utils/: eda.py
